[package]
name = "rustadvent"
version = "0.1.0"
authors = ["Kevin Teh <kkwteh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permutohedron = "0.2.4"
fraction = "0.6.3"
console = "0.11.3"
smallvec = "1.4.0"